# glsl-plugin-interface

./: CMakeLists.txt  README.md
include/: GLSLTypes.h  IPluginInterface.h
src/: BasePluginImpl.h
